add certificate links

--- a/index.html
+++ b/index.html
@@ -71,26 +71,34 @@
                         <li>&#8594; Networking basics</li>
                         <li>&#8594; Operating Systems</li>
                         <li>&#8594; Cross-platform software</li>
-                        <li>&#8594; Encryption</li>
-                        <li>&#8594; Unit testing</li>
-                        <li>&#8594; Integration testing</li>
-                        <li>&#8594; System testing</li>
                         <li>&#8594; Critical Thinking</li>
-                        <li>&#8594; Time management</li>
                     </ul>
                 </section>
 
                 <section class="course">
                     <h3>COURSE</h3>
                     <div class="course-item">
-                        <h4>Borcelle Tech</h4>
-                        <p>Web Design & Development</p>
-                        <p>2019</p>
+                        <h4>Mimo</h4>
+                        <p>Front-End Developer</p>
+                        <p>Full-Stack Developer</p>
+                        <a href="certificate/mimo-certificates-CSS.pdf" target="_blank">
+                            <p>CSS</p>
+                        </a>
                     </div>
                     <div class="course-item">
-                        <h4>Fauget Corp</h4>
-                        <p>Web Design & Development</p>
-                        <p>2020</p>
+                        <h4>SoloLearn</h4>
+                        <a href="certificate/Introduction to HTML certificate (SoloLearn).jpg">
+                            <p>HTML</p>
+                        </a>
+                        <a href="certificate/frontend-beginner-certificate (SoloLearn).png">
+                            <p>Front-End for Beginners</p>
+                        </a>
+                        <a href="certificate/JavaScript Intermediate certificate (SoloLearn).jpg">
+                            <p>JavaScript Intermediate</p>
+                        </a>
+                        <a href="certificate/Introduction to SQL certificate (SoloLearn).jpg">
+                            <p>SQL</p>
+                        </a>
                     </div>
                 </section>
 
@@ -98,7 +106,7 @@
                     <h3>AWARDS</h3>
                     <div class="awards-item">
                         <h4>Liceria & Co.</h4>
-                        <p>Best Web Designer and Developer</p>
+                        <p>Lorem ipsum dolor sit.</p>
                         <p>08/2021</p>
                     </div>
                 </section>
